# libscope

./: .gitmodules  .travis.yml  CMakeLists.txt  README.md  load-env.sh
ci/: build.sh  env.sh  install.sh  test.sh
cmake/modules/: FindNUMA.cmake  Git.cmake  test_cudaDeviceProp.cpp  try_cudaDeviceProp.cmake
docs/: rzvernal.md
include/scope/: barrier.hpp  cache.hpp  chrono.hpp  clobber.hpp  config.hpp.in  cuda copy.hpp  cuda.hpp  defer.hpp  device.hpp  do_not_optimize.hpp  do_not_optimize.hu  error.hpp  flags.hpp  governor.hpp  hip.hpp  init.hpp  logger.hpp  memory_space.hpp  numa.hpp  openmp.hpp  page_size.hpp  scope.hpp  system.hpp  turbo.hpp
include/sysbench/: barrier.hpp  benchmark.hpp  cache.hpp  config.hpp.in  cuda.hpp  error.hpp  flags.hpp  governor.hpp  init.hpp  logger.hpp  numa.hpp  page_size.hpp  sysbench.hpp  turbo.hpp
src/: CMakeLists.txt  cache.cpp  cuda.cpp  device.cpp  do_not_optimize.cu  flags.cpp  governor.cpp  hip.cpp  init.cpp  logger.cpp  memory_space.cpp  numa.cpp  openmp.cpp  system.cpp  turbo.cpp
